gdkwindow-x11: Ensure that extended update counter is freed

I believe this lead to rampant leakage of SyncCounters by
gnome-terminal.

https://bugzilla.gnome.org/show_bug.cgi?id=760188